--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 
 <div id="projects" class="animate-reveal animate-third margin-medium">
-
+	
 	<!-- Featured project -->
 	<a href="fms-pos.html">
 	<div class="section">
 		<img class="project-pic" src="pics/pos-small.png"  style="background-color: #AFD7F3;">
 		<div class="project-info" style="background-color: rgba(175, 215, 243, 0)">
-			<div class="proj-header">Grocery POS</div>
+			<div class="proj-header">Food Management System</div>
 			<div class="subheader-4">I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</div>
 			<div class="subheader-2">Fall 2019 - Spring 2020 • DELOITTE DIGITAL</div>
 			<div class="tags">
@@ -83,7 +83,6 @@ $('#footer').load('http://emilyporat.com/footer.html');
 		</div>
 	</div>
 	</a>
-
 
 	<!-- Featured project -->
 	<a href="rsvpd.html">
@@ -103,7 +102,6 @@ $('#footer').load('http://emilyporat.com/footer.html');
 	</div>
 	</a>
 
-
 	<!-- Featured project -->
 	<a href="justharvest.html">
 	<div class="section">
@@ -119,7 +117,6 @@ $('#footer').load('http://emilyporat.com/footer.html');
 		</div>
 	</div>
 	</a>
-
 
 	<!-- Featured project -->
 	<a href="l&d.html">
