--- a/justharvest.html
+++ b/justharvest.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="styles/justharvest.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
     <link rel="stylesheet" type="text/css" href="styles/contact.css">
+    <link rel="stylesheet" type="text/css" href="styles/projects.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -173,17 +174,63 @@
 			</div>
       </div>
 
-    <div style="background-color: white; position: relative; display: flow-root">
-		  	<a href="l&d.html" class="next-project" style="background-color: #f9f59c; color: black; float: right"> 
-		  		L&D PORTAL 
-                <i class="fa fa-chevron-right" style="padding-left: 10px"></i>
-		  	</a>
+	<div id="projects" class="animate-reveal animate-third margin-medium">
+		<div class="header">View More Projects</div>
+		<!-- Featured project -->
+		<a href="fms-pos.html">
+		<div class="section">
+			<img class="project-pic" src="pics/pos-small.png"  style="background-color: #AFD7F3;">
+			<div class="project-info" style="background-color: rgba(175, 215, 243, 0)">
+				<div class="proj-header">Food Management System</div>
+				<div class="subheader-4">I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</div>
+				<div class="subheader-2">Fall 2019 - Spring 2020 • DELOITTE DIGITAL</div>
+				<div class="tags">
+					<div class="tag">UX</div>
+					<div class="tag">visual design</div>
+					<div class="tag">web design</div>
+					<div class="tag">mobile design</div>
+					<div class="tag">gov</div>
+				</div>
+			</div>
+		</div>
+		</a>
 
-		  	<a href="rsvpd.html" class="next-project" style="background-color: #f9f59c; color: black; float: left"> 
-		  		<i class="fa fa-chevron-left" style="padding-right: 10px"></i>
-                RSVP'D
-		  	</a>
-      </div>
+		<!-- Featured project -->
+		<a href="rsvpd.html">
+		<div class="section">
+			<img src="pics/rsvpd.png" class="project-pic" style="opacity:1; background-color: #ff943a">
+			<div class="project-info">
+				<div class="proj-header">RSVP'd</div>
+				<div class="subheader-4">Mobile app that helps event planners predict attendance by providing predictability, motivation, and accountability.</div>
+				<div class="subheader-2" >FALL 2018 • CARNEGIE MELLON</div>
+				<div class="tags">
+					<div class="tag">UX</div>
+					<div class="tag">visual design</div>
+					<div class="tag">mobile design</div>
+					<div class="tag">prototype</div>
+				</div>
+			</div>
+		</div>
+		</a>
+
+		<!-- Featured project -->
+		<a href="l&d.html">
+		<div class="section">
+			<img src="pics/l&d.jpg" class="project-pic">
+			<div class="project-info">
+				<div class="proj-header">Learning & Development Portal</div>
+				<div class="subheader-4">Website through which employees request continuing education programs.</div>
+				<div class="subheader-2">SUMMER 2018 • DELOITTE DIGITAL</div>
+				<div class="tags">
+					<div class="tag">UX</div>
+					<div class="tag">user research</div>
+					<div class="tag">web design</div>
+					<div class="tag">prototype</div>
+				</div>
+			</div>
+		</div>
+		</a>
+</div>
 
   	<div id="footer"></div>
   	</meta>
