--- a/l&d.html
+++ b/l&d.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
     <link rel="stylesheet" type="text/css" href="styles/l&d.css">
+    <link rel="stylesheet" type="text/css" href="styles/projects.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -266,17 +267,62 @@
 		</div>
 		</div>
 
-        <div style="background-color: white; position: relative; display: flow-root">
-		  	<a href="fms-pos.html" class="next-project" style="background-color: #49ce5c; float: right"> 
-		  		GROCERY POS
-                <i class="fa fa-chevron-right" style="padding-left: 10px"></i>
-		  	</a>
+	<div id="projects" class="animate-reveal animate-third margin-medium">
+		<div class="header">View More Projects</div>
+		<!-- Featured project -->
+		<a href="fms-pos.html">
+		<div class="section">
+			<img class="project-pic" src="pics/pos-small.png"  style="background-color: #AFD7F3;">
+			<div class="project-info" style="background-color: rgba(175, 215, 243, 0)">
+				<div class="proj-header">Food Management System</div>
+				<div class="subheader-4">I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</div>
+				<div class="subheader-2">Fall 2019 - Spring 2020 • DELOITTE DIGITAL</div>
+				<div class="tags">
+					<div class="tag">UX</div>
+					<div class="tag">visual design</div>
+					<div class="tag">web design</div>
+					<div class="tag">mobile design</div>
+					<div class="tag">gov</div>
+				</div>
+			</div>
+		</div>
+		</a>
 
-		  	<a href="justharvest.html" class="next-project" style="background-color: #49ce5c; float: left"> 
-		  		<i class="fa fa-chevron-left" style="padding-right: 10px"></i>
-                COMMUNITY TABLE
-		  	</a>
-        </div>
+		<!-- Featured project -->
+		<a href="rsvpd.html">
+		<div class="section">
+			<img src="pics/rsvpd.png" class="project-pic" style="opacity:1; background-color: #ff943a">
+			<div class="project-info">
+				<div class="proj-header">RSVP'd</div>
+				<div class="subheader-4">Mobile app that helps event planners predict attendance by providing predictability, motivation, and accountability.</div>
+				<div class="subheader-2" >FALL 2018 • CARNEGIE MELLON</div>
+				<div class="tags">
+					<div class="tag">UX</div>
+					<div class="tag">visual design</div>
+					<div class="tag">mobile design</div>
+					<div class="tag">prototype</div>
+				</div>
+			</div>
+		</div>
+		</a>
+
+		<!-- Featured project -->
+		<a href="justharvest.html">
+		<div class="section">
+			<img src="pics/jh.png" class="project-pic" style="opacity:1; background-color: #f9f59c">
+			<div class="project-info">
+				<div class="proj-header">Community Table</div>
+				<div class="subheader-4">Service solution that mutually benefits the nonprofit Just Harvest and the food insecure individuals it serves.</div>
+				<div class="subheader-2" >SPRING 2019 • CARNEGIE MELLON</div>
+				<div class="tags">
+					<div class="tag">service design</div>
+					<div class="tag">nonprofit</div>
+				</div>
+			</div>
+		</div>
+		</a>
+
+	</div>
 
   	<div id="footer"></div>
   	</meta>
