added back pic to about page

--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
             <div class="panel context">
                 <div class="header" style="width: 100%; margin: 0%; margin-bottom: 5%; margin-top: 5%">About Emily</div>
                 <div class="divider"></div>
-<!--              <img src="pics/about/emily4.jpg" style="width: 40%">-->
-              <div class="body">
+              <img id="about-pic" src="pics/about/emily4.jpg">
+              <div class="body" id="about-description">
                 Hi there! If you want to know a little bit more about me, you’ve come to the right place. I'm originally from Mountain View, California, graduated from Carnegie Mellon University in 2019, and I'm currently living in Washington DC and working at Deloitte Digital. Yes, I miss the perfect weather and cheap tacos - but the East Coast isn't half bad.
                 <p>
                 My first exposure to anything remotely related to UI/UX was during my senior year in high school at <a href="http://www.freestyleacademy.rocks/">Freestyle Academy</a>, where I took Web Production and Graphic Design. I learned that I liked making pretty websites, and found a creative outlet that wasn't writing (my other passion in high school).
@@ -53,10 +53,7 @@
                 My design (and life) philosophy is all about minimalism. Yes, I am a total fangirl of <a href="https://www.amazon.com/dp/B00KK0PICK/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1">The Life-Changing Magic of Tidying Up</a>, but that doesn’t mean I only own one pair of shoes and live in a 200 square foot apartment. Rather, I firmly believe that “in anything at all, perfection is finally attained not when there is no longer anything to add, but when there is no longer anything to take away” (Antoine de Saint-Exupery).
                 </p>
                 <p>
-                I'm currently working on an enterprise web-based management system for a large federal agency through the Government and Public Service (GPS) divison of Deloitte Digital.
-                </p> 
-                <p>
-                In my free time, I like to lift weights, cook healthy(ish) food, and hang out with my cats. 
+                In my free time, I like to lift weights, cook healthy(ish) food, and hang out with my two cats. 
                 </p>
                 </div>
             </div>
