--- a/footer.html
+++ b/footer.html
@@ -1,14 +1,28 @@
-<div id="contact" class="padding-medium">
-  <div class="contact-title">Want to chat? Let's get in touch!</div> 
-  <div class="contact-text">
-    <a href="mailto:emporat@gmail.com" target="_top">emporat@gmail.com</a>
-    <p>(650) 996 - 8836</p>
-    <div id="social" class="padding-medium">
-      <a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a>
-      | 
-      <a href="https://github.com/emilyporat/">GitHub</a>
-      |
-      <a href="https://www.instagram.com/emilyporat.eats/">Insta</a>
+<div id="contact">
+
+  <img src="pics/footer.png" id="contact-pic">
+  
+  <div id="container">
+    <div class="contact-text header" style="margin-left: 10vw; font-size: 3em; transform: translateY(-20%);">
+      <div style="font-family:'Tokyo-Regular'; color: white;">Emily Porat</div> 
+      <div style="color: white">UX Designer</div>
+    </div>
+
+    <div class="contact-text">
+      <div class="subheader-4" style="color: white">Projects</div>
+      <div class="space"></div>
+        <p><a href="fms-pos.html">Food Management System</a></p>
+        <p><a href="rsvpd.html">RSVP'd</a></p>
+        <p><a href="justharvest.html">Community Table</a></p>
+        <p><a href="l&d.html">L&D Portal</a></p>
+    </div>
+     
+    <div class="contact-text">
+      <div class="subheader-4" style="color: white">Contact</div>
+      <div class="space"></div>
+        <p><a href="mailto:emporat@gmail.com" target="_top">emporat@gmail.com</a></p>
+        <p style="color: white">(650) 996 - 8836</p>
+        <p><a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a> |  <a href="resume.pdf">Resume</a></p>
     </div>
   </div>
   <div id="copyright">© Emily Porat 2020</div>
