added notes where I didn't design things fully

--- a/fms-pos.html
+++ b/fms-pos.html
@@ -53,7 +53,7 @@
 			<p>
 				Sophisticated applications can be built quickly by using the wide range of 'out of the box' Salesforce components. However, this particular system has many complex requirements, and custom-designed interfaces were required in three major areas: customer data management, inventory management, and the point of sale (POS) checkout system.
 			</p>
-			<p><i>Please note: some data fields and details are omitted due to restrictions surrounding government contracting.</i></p>
+			<p><i>Please note: some data fields and details are omitted due to restrictions surrounding government contracting. Unless otherwise noted, I personally designed every screen below (with guidance from my lead).</i></p>
 		</div>
 
 		<div class="context-specifics">
@@ -422,8 +422,10 @@
 			<div>
 				The home screen displays every household in a user's organization. Originally, we considered conditionally showing the "Issue" button only if the household could be issued to, but the logic to determine that depended on too many factors. We decided that hiding the Issue button would be more of a distraction than an aid. Instead, we trigger an alert explaining why users can't issue after tapping the button. The established business process is to check a household's certification <i>before</i> issuing, so the scenario where the household can't be issued to should be quite rare.
 			</div>
-			
+
 			<img src="pics/fms/mobile-design-1.png" class="pic-right" style="border:none" alt="An iPad with the Home page open to a list of households">
+			<i>Please note: my teammate designed the initial visual comp for this screen, and I built on her work.</i>
+
 			<div class="space"></div>
 			<div class="subheader-4">Enhancements</div>
 				<ul>
@@ -454,6 +456,9 @@
 				<p>The goal for these screens was to provide flexibility to adapt to every use case.</p>
 				
 				<img src="pics/fms/mobile-design-2.png" class="pic-right" style="border:none" alt="An iPad with the Home page open to a list of households">
+
+				<i>Please note: I designed the hi-fidelity wireframes for these screens, and my teammate translated them to visual comps.</i>
+				<div class="space"></div>
 
 				<div class="subheader-4">Category Overview</div>
 				<p>
