--- a/index.html
+++ b/index.html
@@ -48,16 +48,17 @@ $('#footer').load('http://emilyporat.com/footer.html');
 			</div>
 
 			<div id="home-text-description" class="animate-reveal animate-first">
-				<div style="font-family:'Tokyo-Regular'; color:black">Emily Porat</div> 
+				<div style="font-family:'Tokyo-Regular'; color:black;">Emily Porat</div> 
 				<div>UX Designer</div>
 				<div class="space"></div>
-				 <p id="intro-2">
-					Currently @ Deloitte Digital in <i class="fa fa-map-marker" style="padding-right: 4px"></i>Washington DC, where I work with government agencies to modernize systems that matter.
-				</p>
 			</div>
+
+			 <p id="intro-2" class="animate-reveal animate-second">
+				Currently at Deloitte Digital in Washington DC, where I work with government agencies to modernize systems that matter.
+			</p>
 	</div>
 
-	<div id="arrow-down" onclick="slideDown()"><i class="fa fa-angle-double-down"></i></div>
+	<div id="arrow-down" onclick="slideDown()" class="animate-reveal animate-third"><i class="fa fa-angle-double-down"></i></div>
 
 </div>
 
