--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 <link rel="stylesheet" type="text/css" href="styles/home.css">
 <link rel="stylesheet" type="text/css" href="styles/projects.css">
 <link rel="stylesheet" type="text/css" href="styles/nav.css">
+
 <!--     <link rel="stylesheet" type="text/css" href="styles/projects.css"> -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
+
 <link rel="icon" type="image/x-icon" href="pics/favicon.ico" />
+<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119412150-1"></script>
 <script>
@@ -39,30 +43,70 @@ $('#footer').load('http://emilyporat.com/footer.html');
 <div id="nav"></div>
 
 <div id="home">
-	<img src="pics/home.png" class="home-pic">
 	<div id="intro">
-			<div id="home-nav" style="float:right">   
+<!-- 			<div id="home-nav" style="float:right">   
 					<a class="nav-item-home" onclick="slideDown()"><b>PROJECTS</b></a>
 					<a class="nav-item-home" href="about.html"><b>ABOUT</b></a>
 					<a class="nav-item-home" style="text-transform:capitalize" target="_blank" href="resume.pdf"><b>RÈSUMÈ</b></a>
+			</div> -->
+
+			<div id="home-wrapper"> 
+				<div id="home-text-description" class="animate-reveal animate-first">
+					<div style="font-family:'Tokyo-Regular'; color:black;">Emily Porat</div> 
+					<div style="color: #6E88E2">Digital Designer</div>
+					<div class="space"></div>
+				</div>
+
+				 <p id="intro-2" class="animate-reveal animate-second">
+					Designer with a breadth of experience across a variety of products and platforms, with skills in UX, UI, and Interaction Design. I currently work at Deloitte Digital.
+				</p>
+
+				<a class="primary button" target="_blank" href="resume.pdf"><i class="fa fa-download" ></i> RÈSUMÈ</a>
+				<div class="secondary button" onclick="slideDown()">VIEW PROJECTS</div>
 			</div>
 
-			<div id="home-text-description" class="animate-reveal animate-first">
-				<div style="font-family:'Tokyo-Regular'; color:black;">Emily Porat</div> 
-				<div>UX Designer</div>
-				<div class="space"></div>
-			</div>
-
-			 <p id="intro-2" class="animate-reveal animate-second">
-				Currently at Deloitte Digital in Washington DC, where I work with government agencies to modernize systems that matter.
-			</p>
+			<img src="pics/home-projects.png" class="home-pic">
 	</div>
 
-	<div id="arrow-down" onclick="slideDown()" class="animate-reveal animate-third"><i class="fa fa-angle-double-down"></i></div>
+	<!-- <div id="arrow-down" onclick="slideDown()" class="animate-reveal animate-third"><i class="fa fa-angle-double-down"></i></div> -->
 
 </div>
 
 <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
+
+
+<div id="design-philosophy">
+	 
+	<div class="header" style="font-family:'Tokyo-Regular'; color:black; text-align: center; width: 100%; margin-bottom: 8%">DESIGN PHILOSOPHY</div>
+
+	<div class="philosophy-card" style="margin-right: 3%">
+		<div class="philosophy-card-icon" style="background-color: #FF8C8D"><i class="fas fa-balance-scale"></i></div>
+		<div class="subheader-4" style="vertical-align: middle; display: inline-block; width: 70%">Defining "good enough"</div>
+		<div class="space"></div>
+		<div class="body">
+			There's a spectrum possibility and never enough time, resources, or budget to get everything 100% right. The trick is to find the "good enough" point - to pick our battles, understand the user's needs and priorities, and do what we can to serve those needs while working within the constraints of the real world.
+		</div>
+	</div>
+
+	<div class="philosophy-card" style="margin-right: 3%">
+		<div class="philosophy-card-icon" style="background-color: #FFD812"><i class="fa fa-users"></i></div>
+		<div class="subheader-4" style="vertical-align: middle; display: inline-block; width: 70%">Being a team player</div>
+		<div class="space"></div>
+		<div class="body">
+			An integral part of any project is working with functional and technical teammates to assess level of effort, technical complexity, and overall feasibility of the designs. Because, at the end of the day, a pixel-perfect design is nothing without stakeholder buy-in and working code.
+		</div>		
+	</div>
+
+	<div class="philosophy-card">
+		<div class="philosophy-card-icon" style="background-color: #6E88E2"><i class="fas fa-fist-raised"></i></div>
+		<div class="subheader-4" style="vertical-align: middle; display: inline-block; width: 70%">Wielding power wisely</div>
+		<div class="space"></div>
+		<div class="body">
+			Every design decision I make - from who to interview during research to the button color on a UI - impacts the end user. It’s my responsibility to honor the perspectives of marginalized groups, check my biases at the door, and generally design in ways that are respectful, ethical and useful.
+		</div>		
+	</div>
+
+</div>
 
 
 <div id="projects" class="margin-medium">
