tinkering with some styles

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 				</div>
 
 				 <p id="intro-2" class="animate-reveal animate-second">
-					Designer with a breadth of experience across a variety of products and platforms, with skills in UX, UI, and Interaction Design. I currently work at Deloitte Digital.
+					Designer with a breadth of experience across a variety of products and platforms, with skills in UX, UI, and Interaction Design.
 				</p>
 
 				<a class="primary button" target="_blank" href="resume.pdf"><i class="fa fa-download" ></i> RÈSUMÈ</a>
