updtaed philosophy section

--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 	<div class="philosophy-card" style="margin-right: 3%">
 		<div class="philosophy-card-icon" style="background-color: #FF8C8D"><i class="fas fa-balance-scale"></i></div>
-		<div class="subheader-4" style="vertical-align: middle; display: inline-block; width: 70%">Defining "good enough"</div>
+		<div class="subheader-4" style="vertical-align: middle; display: inline-block; width: 70%">Make pragmatic choices</div>
 		<div class="space"></div>
 		<div class="body">
-			There's a spectrum possibility and never enough time, resources, or budget to get everything 100% right. The trick is to find the "good enough" point - to pick our battles, understand the user's needs and priorities, and do what we can to serve those needs while working within the constraints of the real world.
+			There's a spectrum of possibility and never enough time, resources, or budget to get everything 100% right. The trick is to find the "good enough" point - to pick our battles, understand the user's needs and priorities, and do what we can to serve those needs while working within the constraints of the real world.
 		</div>
 	</div>
 
 	<div class="philosophy-card" style="margin-right: 3%">
 		<div class="philosophy-card-icon" style="background-color: #FFD812"><i class="fa fa-users"></i></div>
-		<div class="subheader-4" style="vertical-align: middle; display: inline-block; width: 70%">Being a team player</div>
+		<div class="subheader-4" style="vertical-align: middle; display: inline-block; width: 70%">Strong team, strong product</div>
 		<div class="space"></div>
 		<div class="body">
 			An integral part of any project is working with functional and technical teammates to assess level of effort, technical complexity, and overall feasibility of the designs. Because, at the end of the day, a pixel-perfect design is nothing without stakeholder buy-in and working code.
@@ -99,7 +99,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 	<div class="philosophy-card">
 		<div class="philosophy-card-icon" style="background-color: #6E88E2"><i class="fas fa-fist-raised"></i></div>
-		<div class="subheader-4" style="vertical-align: middle; display: inline-block; width: 70%">Wielding power wisely</div>
+		<div class="subheader-4" style="vertical-align: middle; display: inline-block; width: 70%">Wield power wisely</div>
 		<div class="space"></div>
 		<div class="body">
 			Every design decision I make - from who to interview during research to the button color on a UI - impacts the end user. It’s my responsibility to honor the perspectives of marginalized groups, check my biases at the door, and generally design in ways that are respectful, ethical and useful.
