updated mobile styles

--- a/index.html
+++ b/index.html
@@ -44,11 +44,6 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 <div id="home">
 	<div id="intro">
-<!-- 			<div id="home-nav" style="float:right">   
-					<a class="nav-item-home" onclick="slideDown()"><b>PROJECTS</b></a>
-					<a class="nav-item-home" href="about.html"><b>ABOUT</b></a>
-					<a class="nav-item-home" style="text-transform:capitalize" target="_blank" href="resume.pdf"><b>RÈSUMÈ</b></a>
-			</div> -->
 
 			<div id="home-wrapper"> 
 				<div id="home-text-description" class="animate-reveal animate-first">
@@ -68,8 +63,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 			<img src="pics/home-projects.png" class="home-pic">
 	</div>
 
-	<!-- <div id="arrow-down" onclick="slideDown()" class="animate-reveal animate-third"><i class="fa fa-angle-double-down"></i></div> -->
-
+	<img src="pics/home-mobile.png" class="home-pic-mobile">
 </div>
 
 <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
@@ -84,7 +78,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 		<div class="subheader-4" style="vertical-align: middle; display: inline-block; width: 70%">Make pragmatic choices</div>
 		<div class="space"></div>
 		<div class="body">
-			There's a spectrum of possibility and never enough time, resources, or budget to get everything 100% right. The trick is to find the "good enough" point - to pick our battles, understand the user's needs and priorities, and do what we can to serve those needs while working within the constraints of the real world.
+			There's a spectrum of possibility and never enough time, resources, or budget to get everything 100% right. As designers, we need to pick our battles, understand the user's needs and priorities, and do what we can to serve those needs while working within the constraints of the real world.
 		</div>
 	</div>
 
