--- a/nav.html
+++ b/nav.html
@@ -5,5 +5,5 @@
 		<a class="nav-item" href="about.html" onclick="toggleNav()">ABOUT</a>
 		<a class="nav-item" href="resume.pdf" target="_blank" onclick="toggleNav()">RÈSUMÈ</a>
 	</div>
-	<div id="hamburger" class="fa fa-bars" onclick="toggleNav()"></div>
+	<div id="hamburger" class="fas fa-bars" onclick="toggleNav()"></div>
 </div>
