--- a/fms-pos.html
+++ b/fms-pos.html
@@ -9,7 +9,9 @@
 	<link rel="stylesheet" type="text/css" href="styles/projects.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- Icons -->
+	<script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119412150-1"></script>
 	<script>
