--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,7 @@
   <div id="container">
     <div class="contact-text header" style="margin-left: 10vw; font-size: 3em; transform: translateY(-20%);">
       <div style="font-family:'Tokyo-Regular'; color: white;">Emily Porat</div> 
-      <div style="color: white">UX Designer</div>
+      <div style="color: white">Digital Designer</div>
     </div>
 
     <div class="contact-text">
