added animation to home load

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@ $('#footer').load('http://emilyporat.com/footer.html');
 					Designer with a breadth of experience across a variety of products and platforms, with skills in UX, UI, and Interaction Design.
 				</p>
 
-				<a class="primary button" target="_blank" href="resume.pdf"><i class="fa fa-download" ></i> RÈSUMÈ</a>
-				<div class="secondary button" onclick="slideDown()">VIEW PROJECTS</div>
+				<a class="primary button animate-reveal animate-second" target="_blank" href="resume.pdf"><i class="fa fa-download" ></i> RÈSUMÈ</a>
+				<div class="secondary button animate-reveal animate-second" onclick="slideDown()">VIEW PROJECTS</div>
 			</div>
 
-			<img src="pics/home-projects.png" class="home-pic">
+			<img src="pics/home-projects.png" class="home-pic animate-reveal animate-third">
 	</div>
 
 	<img src="pics/home-mobile.png" class="home-pic-mobile">
