changed home load animation

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@ $('#footer').load('http://emilyporat.com/footer.html');
 <div id="home">
 	<div id="intro">
 
-			<div id="home-wrapper"> 
-				<div id="home-text-description" class="animate-reveal animate-first">
+			<div id="home-wrapper" class="animate-reveal animate-first"> 
+				<div id="home-text-description" >
 					<div style="font-family:'Tokyo-Regular'; color:black;">Emily Porat</div> 
 					<div style="color: #6E88E2">Digital Designer</div>
 					<div class="space"></div>
 				</div>
 
-				 <p id="intro-2" class="animate-reveal animate-second">
+				 <p id="intro-2">
 					Designer with a breadth of experience across a variety of products and platforms, with skills in UX, UI, and Interaction Design.
 				</p>
 
-				<a class="primary button animate-reveal animate-second" target="_blank" href="resume.pdf"><i class="fa fa-download" ></i> RÈSUMÈ</a>
-				<div class="secondary button animate-reveal animate-second" onclick="slideDown()">VIEW PROJECTS</div>
+				<a class="primary button" target="_blank" href="resume.pdf"><i class="fa fa-download" ></i> RÈSUMÈ</a>
+				<div class="secondary button" onclick="slideDown()">VIEW PROJECTS</div>
 			</div>
 
 			<img src="pics/home-projects.png" class="home-pic animate-reveal animate-third">
