only start date on ifms

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 		<div class="project-info" style="background-color: rgba(175, 215, 243, 0)">
 			<div class="proj-header">Food Management System</div>
 			<div class="subheader-4">I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</div>
-			<div class="subheader-2">Fall 2019 - Spring 2020 • DELOITTE DIGITAL</div>
+			<div class="subheader-2">Fall 2019 • DELOITTE DIGITAL</div>
 			<div class="tags">
 				<div class="tag">UX</div>
 				<div class="tag">visual design</div>
