added FHA, new viz on home page

--- a/footer.html
+++ b/footer.html
@@ -1,16 +1,13 @@
 <div id="contact">
-
-  <img src="pics/footer.png" id="contact-pic">
   
   <div id="container">
-    <div class="contact-text header" style="margin-left: 10vw; font-size: 2.4em; transform: translateY(-20%);">
-      <div style="font-family:'Tokyo-Regular'; color: white;">Emily Porat</div> 
-      <div style="color: white; font-size: .9em">Digital Designer</div>
+    <div class="contact-text" style="width: 30vw">
+      <h2 style="color: #F29407">Emily Porat</h2> 
+      <h2 style="color: #FE7062">Digital Designer</h2>
     </div>
 
     <div class="contact-text">
-      <div class="subheader-4" style="color: white">Projects</div>
-      <div class="space"></div>
+      <h3>Projects</h3>
         <p><a href="fms-pos.html">Food Management System</a></p>
         <p><a href="rsvpd.html">RSVP'd</a></p>
         <p><a href="justharvest.html">Community Table</a></p>
@@ -18,12 +15,11 @@
     </div>
      
     <div class="contact-text">
-      <div class="subheader-4" style="color: white">Contact</div>
-      <div class="space"></div>
+      <h3>Contact</h3>
         <p><a href="mailto:emporat@gmail.com" target="_top">emporat@gmail.com</a></p>
         <p style="color: white">(650) 996 - 8836</p>
         <p><a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a> |  <a href="resume.pdf">Resume</a></p>
     </div>
   </div>
-  <div id="copyright">© Emily Porat 2020</div>
+  <p id="copyright">© Emily Porat 2020</p>
 </div>
