--- a/nav.html
+++ b/nav.html
@@ -1,9 +1,9 @@
 <div id="my-nav" class="nav-colored">
-	<a class="nav-logo" href="index.html">EP</a> 
+	<img src="pics/ep-logo.svg" class="nav-logo" href="index.html"> 
 	<div id="nav-items">   
-		<a class="nav-item" id="home-nav-item" href="index.html#projects" onclick="toggleNav()">PROJECTS</a>
-		<a class="nav-item" href="about.html" onclick="toggleNav()">ABOUT</a>
-		<a class="nav-item" href="resume.pdf" target="_blank" onclick="toggleNav()">RÈSUMÈ</a>
+		<a class="nav-item" href="about.html" href="index.html#about">About</a>
+		<a class="nav-item" id="home-nav-item" href="index.html#projects" onclick="toggleNav()">Projects</a>
+		<a class="nav-item" href="resume.pdf" target="_blank" onclick="toggleNav()">Resume</a>
 	</div>
 	<div id="hamburger" class="fas fa-bars" onclick="toggleNav()"></div>
 </div>
