finished updating fms

--- a/l&d.html
+++ b/l&d.html
@@ -268,62 +268,57 @@
 		</div>
 		</div>
 
-	<div id="projects" class="animate-reveal animate-third margin-medium">
-		<div class="header">View More Projects</div>
-		<!-- Featured project -->
-		<a href="fms-pos.html">
-		<div class="section">
-			<img class="project-pic" src="pics/pos-small.png"  style="background-color: #AFD7F3;">
-			<div class="project-info" style="background-color: rgba(175, 215, 243, 0)">
-				<div class="proj-header">Food Management System</div>
-				<div class="subheader-4">I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</div>
-				<div class="subheader-2">Fall 2019 - Spring 2020 • DELOITTE DIGITAL</div>
-				<div class="tags">
-					<div class="tag">UX</div>
-					<div class="tag">visual design</div>
-					<div class="tag">web design</div>
-					<div class="tag">mobile design</div>
-					<div class="tag">gov</div>
-				</div>
-			</div>
-		</div>
-		</a>
+<div id="projects">
 
-		<!-- Featured project -->
-		<a href="rsvpd.html">
-		<div class="section">
-			<img src="pics/rsvpd.png" class="project-pic" style="opacity:1; background-color: #ff943a">
-			<div class="project-info">
-				<div class="proj-header">RSVP'd</div>
-				<div class="subheader-4">Mobile app that helps event planners predict attendance by providing predictability, motivation, and accountability.</div>
-				<div class="subheader-2" >FALL 2018 • CARNEGIE MELLON</div>
-				<div class="tags">
-					<div class="tag">UX</div>
-					<div class="tag">visual design</div>
-					<div class="tag">mobile design</div>
-					<div class="tag">prototype</div>
-				</div>
-			</div>
+	<div class="divider" style="background-color: white; margin-bottom: 5%"></div>
+	<!-- Featured project -->
+	<div class="section">
+		<img class="project-pic" src="pics/pos-small.png"  style="background-color: #F29407; float: right">
+		<div class="project-info" style="float: left; margin-left: 0">
+			<h4>Fall 2019 • Deloitte Digital</h4>
+			<h2 style="color: #F29407">Food Management System</h2>
+			<div class="short-divider"></div>
+			<h3>I redesigned key features of the interface that government workers will use to provide food to nearly 100,000 low-income individuals.</h3>
+			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page" style="background-color: white">
+				<h4 style="color: black">Learn More</h4>
+			</button>
 		</div>
-		</a>
-
-		<!-- Featured project -->
-		<a href="justharvest.html">
-		<div class="section">
-			<img src="pics/jh.png" class="project-pic" style="opacity:1; background-color: #f9f59c">
-			<div class="project-info">
-				<div class="proj-header">Community Table</div>
-				<div class="subheader-4">Service solution that mutually benefits the nonprofit Just Harvest and the food insecure individuals it serves.</div>
-				<div class="subheader-2" >SPRING 2019 • CARNEGIE MELLON</div>
-				<div class="tags">
-					<div class="tag">service design</div>
-					<div class="tag">nonprofit</div>
-				</div>
-			</div>
-		</div>
-		</a>
-
 	</div>
+
+	<div class="divider" style="background-color: white; margin-bottom: 5%"></div>
+
+	<!-- Featured project -->
+	<div class="section">
+		<img src="pics/l&d.png" class="project-pic" style="background-color: #8D63B0">
+		<div class="project-info">
+			<h4>Summer 2018 • Deloitte Digital</h4>
+			<h2 style="color: #8D63B0">Learning & Development Portal</h2>
+			<div class="short-divider"></div>
+			<h3>During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</h3>	
+			<button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page" style="background-color: white">
+				<h4 style="color: black">Learn More</h4>
+			</button>
+		</div>
+	</div>
+
+	<div class="divider" style="background-color: white; margin-bottom: 5%"></div>
+
+	<!-- Featured project -->
+	<div href="rsvpd.html">
+	<div class="section">
+		<img src="pics/rsvpd.png" class="project-pic" style="background-color: #3C845E; float: right">
+		<div class="project-info" style="float: left; margin-left: 0">
+			<h4>Fall 2018 • Carnegie Mellon University</h4>
+			<h2 style="color: #3C845E">RSVP'd</h2>
+			<div class="short-divider"></div>
+			<h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
+			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page" style="background-color: white">
+				<h4 style="color: black">Learn More</h4>
+			</button>
+		</div>
+	</div>
+	</div>
+</div>
 
   	<div id="footer"></div>
   	</meta>
